# SkipTrain

./: LICENSE  README.rst  setup.cfg  setup.py
eval/: testing.py
src/skiptrain/node/: SkipTrainNode.py
tutorial/: 256_nodes_8_regular.txt  Energy_traces_CIFAR-10.csv  Energy_traces_Femnist.csv  run_dpsgd.sh  run_greedy.sh  run_skiptrain.sh  run_skiptrain_constrained.sh
tutorial/config_file_DPSGD/: config.ini  config_FEMNIST.ini
tutorial/config_file_greedy/: config.ini
tutorial/config_file_skiptrain/: config.ini  config_FEMNIST.ini
tutorial/config_file_skiptrain_constrained/: config.ini  config_FEMNIST.ini
tutorial/tutorial/: 256_nodes_10_regular.txt  256_nodes_6_regular.txt  8_nodes_3_regular.txt  config.ini  run_dpsgd.sh  run_greedy.sh  run_skiptrain.sh  run_skiptrain_constrained.sh
tutorial/tutorial/config_file_DPSGD/: config.ini
tutorial/tutorial/config_file_greedy/: config.ini  config_FEMNIST.ini
tutorial/tutorial/config_file_skiptrain/: config.ini
