[metadata]
name = SkipTrain
version = 0.1.dev0
author = Elia Guerra
author_email = eliaguerra97@gmail.com
license = MIT
description = Energy-Aware Decentralized Learning with Intermittent Model Training
keywords =
    python
    decentralized
    ml
    learning
    sacs
    energy efficiency
url = 
download_url = https://github.com/eliaguerra97/SkipTrain
long_description = file: README.rst
classifiers =
        Development Status :: 4 - Beta
        Intended Audience :: Education
        Intended Audience :: Science/Research
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent
        Programming Language :: Python
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Topic :: Scientific/Engineering
[options]
package_dir =
    = src
packages = find:
zip_safe = False
install_requires =
include_package_data = True
python_requires = >=3.6
[options.packages.find]
where = src
[tool:pytest]
norecursedirs =
    .git
    dist
    build
python_files =
    test_*.py
doctest_plus = disabled
addopts = --strict
markers =
    slow
    remote_data
    filterwarnings
    mpl_image_compare
[flake8]
ignore = E203, E266, E501, W503
max-line-length = 80
max-complexity = 18
select = B,C,E,F,W,T4,B9